<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:animateLayoutChanges="true"
    android:background="@drawable/popup_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/default_layout_margin_padding">

    <!--Title-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        style="@style/DialogTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_quit_game" />

    <!--Message-->
    <com.google.android.material.textview.MaterialTextView
        style="@style/DialogMessageStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_quit_game" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_layout_margin_padding"
        android:gravity="center"
        android:orientation="horizontal">

        <!--Negative Button-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_large_green_button"
            android:text="@string/action_cancel" />

        <!--Positive Button-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_quit"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_layout_margin_padding"
            android:layout_weight="1"
            android:background="@drawable/selector_large_red_button"
            android:text="@string/action_quit" />
    </LinearLayout>
</LinearLayout>